// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event_kind_filters createEventKindFilter query structure snapshots should generate expected query structure with multiple modules 1`] = `
Object {
  "bool": Object {
    "minimum_should_match": 1,
    "should": Array [
      Object {
        "term": Object {
          "event.kind": "event",
        },
      },
      Object {
        "bool": Object {
          "must": Array [
            Object {
              "term": Object {
                "event.kind": "signal",
              },
            },
            Object {
              "terms": Object {
                "event.module": Array [
                  "crowdstrike",
                  "sentinel_one",
                ],
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`event_kind_filters createEventKindFilter query structure snapshots should handle empty modules list 1`] = `
Object {
  "bool": Object {
    "minimum_should_match": 1,
    "should": Array [
      Object {
        "term": Object {
          "event.kind": "event",
        },
      },
      Object {
        "bool": Object {
          "must": Array [
            Object {
              "term": Object {
                "event.kind": "signal",
              },
            },
            Object {
              "terms": Object {
                "event.module": Array [],
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`event_kind_filters createEventKindFilter query structure snapshots should handle single module 1`] = `
Object {
  "bool": Object {
    "minimum_should_match": 1,
    "should": Array [
      Object {
        "term": Object {
          "event.kind": "event",
        },
      },
      Object {
        "bool": Object {
          "must": Array [
            Object {
              "term": Object {
                "event.kind": "signal",
              },
            },
            Object {
              "terms": Object {
                "event.module": Array [
                  "crowdstrike",
                ],
              },
            },
          ],
        },
      },
    ],
  },
}
`;
